Ticket #29108: Single-level grouping with subtotals (GroupRow, SimpleGroup; Row.group() -> Group).